got the whole game working, yay!

--- a/static/index.html
+++ b/static/index.html
@@ -7,13 +7,15 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <title>DevCamp React Starter</title>
 
-  <script src="/src/bootstrap.js">
-
+  <script src="/src/bootstrap.js" >
   </script>
 </head>
 
 <body>
   <div class="app-wrapper"></div>
 </body>
+<script>
+    console.log("groovy")
 
+</script>
 </html>
